Fix for alert visibility

--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -56,6 +56,7 @@ a {
     top: $border-offset;
     right: $border-offset;
     animation: alert-flash 3s forwards;
+    z-index: 99;
 }
 @keyframes alert-flash {
     0% {
